--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ input[type="radio"].visually-hidden {
 .site-navigation {
   list-style: none;
   width: 437px;
-  margin: 0;
+  margin: 0 41px 0 0;
   padding: 0;
   justify-self: center;
   display: flex;
@@ -170,7 +170,7 @@ input[type="radio"].visually-hidden {
 
 .site-navigation,
 .user-navigation {
-  margin-top: 26px;
+  margin-top: 15px;
 }
 
 .site-navigation a,
@@ -179,6 +179,7 @@ input[type="radio"].visually-hidden {
   display: block;
   padding-top: 12px;
   padding-bottom: 12px;
+  
 }
 
 .site-navigation li {
@@ -203,7 +204,7 @@ input[type="radio"].visually-hidden {
   background-repeat: no-repeat;
   background-position: 0 0;
   left: 0;
-  top: 20px;
+  top: 18px;
 }
 
 .site-navigation a:hover,
@@ -241,7 +242,7 @@ input[type="radio"].visually-hidden {
   font-size: 55px;
   line-height: 55px;
   font-weight: 500;
-  margin: 75px 0 36px;
+  margin: 68px 0 27px;
 }
 
 .slider-list {
@@ -254,7 +255,7 @@ input[type="radio"].visually-hidden {
 }
 
 .slider-list-item p:nth-child(2) {
-  margin-bottom: 27px;
+  margin-bottom: 37px;
 }
 
 .slider-list-item {
@@ -270,7 +271,7 @@ input[type="radio"].visually-hidden {
   color: var(--basic-white);
   background-color: var(--basic-red);
   border: none;
-  padding: 17px 54px 15px;
+  padding: 17px 55px 15px 55px;
   border-radius: 3px;
   margin-bottom: 80px;
 }
@@ -285,7 +286,7 @@ input[type="radio"].visually-hidden {
 
 .slider-control {
   position: absolute;
-  bottom: 95px;
+  bottom: 96px;
   width: 88px;
   left: 536px;
   display: flex;
@@ -322,8 +323,8 @@ input[type="radio"].visually-hidden {
   position: absolute;
   width: 760px;
   height: 431px;
-  top: -6px;
-  left: 398px;
+  top: -11px;
+  left: 397px;
   background-image: url("../img/nerds-index-slide1-1.png");
   background-repeat: no-repeat;
   background-position: 100% 100%;
@@ -334,8 +335,8 @@ input[type="radio"].visually-hidden {
   position: absolute;
   width: 760px;
   height: 431px;
-  top: -6px;
-  left: 398px;
+  top: -11px;
+  left: 397px;
   background-image: url("../img/nerds-index-slide2-1.png");
   background-repeat: no-repeat;
   background-position: 100% 100%;
@@ -346,8 +347,8 @@ input[type="radio"].visually-hidden {
   position: absolute;
   width: 760px;
   height: 431px;
-  top: -6px;
-  left: 398px;
+  top: -11px;
+  left: 397px;
   background-image: url("../img/nerds-index-slide3-1.png");
   background-repeat: no-repeat;
   background-position: 100% 100%;
@@ -398,7 +399,7 @@ input[type="radio"].visually-hidden {
   text-transform: uppercase;
   margin: 0;
   position: relative;
-  padding-top: 173px;
+  padding-top: 171px;
 }
 
 .features-list-item:first-child h3::before {
@@ -450,7 +451,7 @@ input[type="radio"].visually-hidden {
   border: none;
   margin: 0;
   display: flex;
-  padding: 17px 40px 15px 39px;
+  padding: 17px 40px 15px 41px;
   border-radius: 3px;
 }
 
@@ -500,42 +501,49 @@ input[type="radio"].visually-hidden {
 .about-us {
   margin: 0 auto;
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 2fr 360px;
   gap: 149px;
   padding-top: 39px;
-  margin-bottom: 73px;
+  margin-bottom: 72px;
   border-top: 2px solid var(--basic-lightgray);
 }
 
+
 .about-us img {
   background-color: var(--basic-gray);
-  margin-bottom: 37px;
+  margin-bottom: 30px;
 }
 
 .about-us-left-column p:first-child {
   font-size: 45px;
   line-height: 45px;
   font-weight: 500;
-  margin: 39px 0 32px;
+  /* margin: 39px 0 32px; */
+  margin-top: 35px;
+  margin-bottom: 32px;
+  margin-left: 0;
+  margin-right: 0;
   padding: 0;
 }
 
 .about-us-left-column p:nth-child(2) {
-  margin-bottom: 40px;
+  margin-bottom: 41px;
 }
 
 .about-us-left-column p:nth-child(3) {
+  text-transform: uppercase;
   font-weight: bold;
-  margin-bottom: 23px;
+  margin-bottom: 24px;
+  
 }
 
 .about-us-right-column p {
-
   font-size: 16px;
   line-height: 24px;
   font-weight: bold;
-  margin: 0 0 31px 0;
-  margin-left: 19px;
+  text-transform: uppercase;
+  margin: 0 0 29px 0;
+  margin-left: 17px;
 }
 
 .services-list {
@@ -545,8 +553,8 @@ input[type="radio"].visually-hidden {
 
 .services-list li {
   list-style: none;
-  padding: 0 0 0 38px;
-  margin: 0 0 37px 0;
+  padding: 0 0 0 36px;
+  margin: 0 0 24px 0;
   position: relative;
 }
 
@@ -569,12 +577,17 @@ input[type="radio"].visually-hidden {
 
 /* Table */
 
+.features-table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
 .features-table .data {
   font-size: 45px;
   line-height: 64px;
   font-weight: bold;
-  padding-right: 22px;
-  padding-bottom: 27px;
+  padding-right: 21px;
+  padding-bottom: 11px;
 
 }
 
@@ -596,7 +609,7 @@ input[type="radio"].visually-hidden {
 }
 
 .partner-logo-list {
-  height: 180px;
+  min-height: 180px;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -611,20 +624,28 @@ input[type="radio"].visually-hidden {
   position: relative;
 }
 
+.logo-list-item a {
+  display: block;
+}
+
 .logo-list-item:nth-child(1) a {
   margin-left: 32px;
+  margin-top: 20px;
 }
 
 .logo-list-item:nth-child(2) a {
-  margin-left: 37px;
+  margin-left: 36px;
+  margin-top: 8px;
 }
 
 .logo-list-item:nth-child(3) a {
-  margin-left: 60px;
+  margin-left: 59px;
+  margin-top: 9px;
 }
 
 .logo-list-item:nth-child(4) a {
-  margin-left: 80px;
+  margin-left: 74px;
+  margin-top: 14px;
 }
 
 .logo-list-item:nth-child(1)::after {
@@ -632,8 +653,8 @@ input[type="radio"].visually-hidden {
   position: absolute;
   width: 52px;
   height: 2px;
-  top: 25px;
-  left: 257px;
+  top: 45px;
+  left: 254px;
   background-color: var(--basic-lightgray);
   transform: rotate(90deg);
 }
@@ -643,8 +664,8 @@ input[type="radio"].visually-hidden {
   position: absolute;
   width: 52px;
   height: 2px;
-  top: 35px;
-  left: 263px;
+  top: 49px;
+  left: 264px;
   background-color: var(--basic-lightgray);
   transform: rotate(90deg);
 }
@@ -654,8 +675,8 @@ input[type="radio"].visually-hidden {
   position: absolute;
   width: 52px;
   height: 2px;
-  top: 17px;
-  left: 279px;
+  top: 31px;
+  left: 274px;
   background-color: var(--basic-lightgray);
   transform: rotate(90deg);
 }
@@ -728,7 +749,7 @@ input[type="radio"].visually-hidden {
 }
 
 .contacts p:nth-child(2) {
-  margin-bottom: 23px;
+  margin-bottom: 18px;
 }
 
 .contacts p:nth-child(3) {
@@ -752,17 +773,22 @@ input[type="radio"].visually-hidden {
 
 .footer-write-us .button {
   font: inherit;
+  display: inline-block;
+  vertical-align: middle;
   font-size: 16px;
   line-height: 18px;
-  font-weight: bold;
+  font-weight: 500;
   text-align: center;
   text-transform: uppercase;
   color: var(--basic-white);
   background-color: var(--basic-red);
   border: none;
-  margin: 0 auto;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 50px;
+  margin-right: 50px;
   display: flex;
-  padding: 17px 44px 15px;
+  padding: 17px 43px 15px 45px;
   border-radius: 3px;
 }
 
@@ -857,7 +883,7 @@ input[type="radio"].visually-hidden {
 
 .footer-social-text {
   margin-top: 75px;
-  margin-left: 140px;
+  margin-left: 14px;
 }
 
 .footer-social-link p:first-of-type {
@@ -869,6 +895,7 @@ input[type="radio"].visually-hidden {
 
 .footer-social-link p:last-of-type {
   line-height: 18px;
+  margin: 12px 0;
 }
 
 /* Catalog page*/
@@ -876,7 +903,7 @@ input[type="radio"].visually-hidden {
 .main-wrapper h1 {
   font-size: 55px;
   line-height: 55px;
-  margin: 72px 0px 108px 0px;
+  margin: 67px 0px 108px 0px;
   text-align: center;
 }
 
@@ -959,7 +986,7 @@ input[type="radio"].visually-hidden {
 
 .range-controls .toggle {
   position: absolute;
-  top: 31px;
+  top: 30px;
   left: 0;
   width: 4px;
   height: 4px;
@@ -989,8 +1016,8 @@ input[type="radio"].visually-hidden {
   font-size: inherit;
   width: 60px;
   text-align: center;
-  margin-left: 11px;
-  padding: 10px;
+  margin-left: 9px;
+  padding: 10px 0 10px 18px;
   color: var(--special-form-letter);
   border: none;
   border-radius: 5px;
@@ -1003,11 +1030,17 @@ input[type="radio"].visually-hidden {
   margin-bottom: 54px;
 }
 
-.filter {
+  .filter {
   border: 0;
   margin: 0;
   padding: 0;
+  margin-bottom: 22px;
 }
+
+.filters fieldset:nth-of-type(3) {
+  margin-bottom: 5px;
+}
+
 
 .filter legend {
   font-size: 18px;
@@ -1017,17 +1050,27 @@ input[type="radio"].visually-hidden {
   margin-bottom: 16px;
 }
 
-.filter ul {
+ .filter ul {
   margin: 0;
   padding: 0;
   list-style: none;
   line-height: 19px;
-  margin-bottom: 46px;
+  /* margin-bottom: 44px; */
 }
 
-.filter-option {
-  margin-bottom: 25px;
+.filter-option.filter-radio {
+  margin-bottom: 22px;
   padding-left: 38px;
+}
+
+.filter-option.filter-checkbox {
+  padding-left: 38px;
+  margin-bottom: 22px;
+}
+
+.filter-option.filter-checkbox:nth-child(3) {
+  margin-bottom: 20px;
+
 }
 
 .filter-option label {
@@ -1100,7 +1143,7 @@ input[type="radio"].visually-hidden {
 .filter-input-checkbox[checked] + label::before {
   content: "";
   position: absolute;
-  top: -4;
+  top: -4px;
   left: -38px;
   width: 25px;
   height: 23px;
@@ -1235,7 +1278,7 @@ input[type="radio"].visually-hidden {
   font-weight: bold;
   text-transform: uppercase;
   margin-top: 26px;
-  margin-bottom: 9px;
+  margin-bottom: 14px;
   color: var(--basic-black);
 }
 
@@ -1249,6 +1292,8 @@ input[type="radio"].visually-hidden {
 }
 
 .price p {
+  margin: 0;
+  padding: 0;
   width: 255px;
   font-size: 16px;
   line-height: 18px;
@@ -1284,7 +1329,7 @@ input[type="radio"].visually-hidden {
 .list-view-products img {
   position: absolute;
   width: 358px;
-  height: 576px;
+  height: 578px;
   top: 40px;
   z-index: 4;
 }
@@ -1303,7 +1348,8 @@ input[type="radio"].visually-hidden {
   position: absolute;
   width: 11px;
   height: 10px;
-  top: -11px;
+  top: -12px;
+  left: 3px;
   background-image: url("../img/icon-down-dir.svg");
   background-repeat: no-repeat;
 
@@ -1315,7 +1361,7 @@ input[type="radio"].visually-hidden {
   width: 11px;
   height: 10px;
   top: -11px;
-  left: 11px;
+  left: 14px;
   background-image: url("../img/icon-up-dir.svg");
   background-repeat: no-repeat;
 }
@@ -1356,7 +1402,7 @@ input[type="radio"].visually-hidden {
 }
 
 .list-page-button li {
-  margin: 50px 11px 60px 0;
+  margin: 54px 12px 60px 0;
 }
 
 .page-button-item .button {
@@ -1417,7 +1463,7 @@ input[type="radio"].visually-hidden {
   background-color: var(--basic-white);
   margin-bottom: auto;
   z-index: 50;
-  /* display: none; */
+  display: none; 
 }
 
 
