--- a/css/style.css
+++ b/css/style.css
@@ -369,6 +369,7 @@ input[type="radio"].visually-hidden {
 }
 
 /* Features */
+
 .features {
   text-align: left;
   margin: 0 auto 80px auto;
@@ -522,7 +523,6 @@ input[type="radio"].visually-hidden {
   font-size: 45px;
   line-height: 45px;
   font-weight: 500;
-  /* margin: 39px 0 32px; */
   margin-top: 35px;
   margin-bottom: 32px;
   margin-left: 0;
@@ -607,7 +607,7 @@ input[type="radio"].visually-hidden {
   line-height: 18px;
 }
 
-/* Partner */
+/* Partners */
 .partners {
   margin: 0 auto 80px auto;
 }
@@ -1045,7 +1045,6 @@ input[type="radio"].visually-hidden {
   margin-bottom: 5px;
 }
 
-
 .filter legend {
   font-size: 18px;
   line-height: 30px;
@@ -1059,7 +1058,6 @@ input[type="radio"].visually-hidden {
   padding: 0;
   list-style: none;
   line-height: 19px;
-  /* margin-bottom: 44px; */
 }
 
 .filter-option.filter-radio {
@@ -1448,6 +1446,7 @@ input[type="radio"].visually-hidden {
   box-shadow: inset 0 3px 0 var(--special-inset-box-shadow);
 }
 
+/* Modal window */
 
 .modal {
   position: fixed;
@@ -1462,15 +1461,13 @@ input[type="radio"].visually-hidden {
 
 .modal-contact {
   width: 960px;
-  top: 120px;
+  top: 109px;
   bottom: auto;
   background-color: var(--basic-white);
   margin-bottom: auto;
   z-index: 50;
-  display: none; 
+  display: none;
 }
-
-
 
 .contact-form {
   box-sizing: border-box;
@@ -1487,31 +1484,33 @@ input[type="radio"].visually-hidden {
   line-height: 53px;
   font-weight: bold;
   margin-left: 100px;
-  margin-top: 51px;
+  margin-top: 63px;
   margin-bottom: 37px;
+}
+
+.contact-form p {
+  margin: 0;
+  padding: 0;
 }
 
 .contact-form input[type="text"],
 .contact-form input[type="email"] {
   box-sizing: border-box;
-  padding-top: 15px;
-  padding-right: 14px;
-  padding-bottom: 16px;
-  padding-left: 15px;
-  width: 360px;
+  padding: 13px 15px 15px 14px;
+  width: 361px;
   border-radius: 3px;
-  margin-bottom: 37px;
+  margin-bottom: 34px;
   border: 2px solid var(--special-form-border);
 }
 
 .contact-form textarea {
-  width: 740px;
-  min-height: 102px;
+  width: 739px;
+  min-height: 96px;
   padding-top: 16px;
   padding-left: 16px;
   border-radius: 3px;
   resize: none;
-  margin-bottom: 47px;
+  margin-bottom: 40px;
   border: 2px solid var(--special-form-border);
 }
 
@@ -1535,7 +1534,7 @@ input[type="radio"].visually-hidden {
   font-weight: 500;
   text-transform: uppercase;
   padding-top: 17px;
-  padding-right: 83px;
+  padding-right: 85px;
   padding-bottom: 15px;
   padding-left: 83px;
   margin-bottom: 84px;
@@ -1562,7 +1561,7 @@ input[type="radio"].visually-hidden {
   background-image: url("../img/close-cross.svg");
   background-repeat: no-repeat;
   left: 0;
-  top: 0;
+  top: 12px;
   opacity: 0.3;
 }
 
