--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@
   --special-form-border: #D7DCDE;
   --special-toggle-shadow: rgba(0, 0, 0, 0.15);
   --special-form-letter: #283136;
+  --special-placeholder-focus: #444444;
  
   --special-opacity-white: rgba(255, 255, 255, 0.3);
 
@@ -311,7 +312,6 @@ input[type="radio"].visually-hidden {
   width: 18px;
   height: 18px;
   border: none;
-  outline: none;
   border-radius: 50%;
   background-color: var(--basic-white);
   cursor: pointer;
@@ -1087,19 +1087,27 @@ input[type="radio"].visually-hidden {
   display: block;
   cursor: pointer;
   user-select: none;
+  color: var(--special-form-letter);
 }
 
-.filter-input-radio + label {
-  color: var(--special-form-letter);
+.filter-option label::before {
+  color: var(--special-dark-gray);
   opacity: 0.4;
 }
 
-.filter-input-radio:hover + label,
-.filter-input-radio:focus + label {
+.filter-option label:hover::before {
   opacity: 1;
 }
 
-.filter-input-radio:active + label {
+.filter-input-radio:focus + label::before {
+  opacity: 1;
+}
+
+.filter-input-radio:disabled + label {
+  opacity: 0.3;
+}
+
+.filter-input-radio:disabled + label::before {
   opacity: 0.1;
 }
 
@@ -1111,10 +1119,9 @@ input[type="radio"].visually-hidden {
   width: 25px;
   height: 25px;
   background-image: url("../img/radio-off.svg");
-  background-repeat: no-repeat;
 }
 
-.filter-input-radio[checked] + label::before {
+.filter-input-radio:checked + label::before {
   content: "";
   position: absolute;
   top: -4px;
@@ -1125,17 +1132,16 @@ input[type="radio"].visually-hidden {
   
 }
 
-.filter-input-checkbox + label {
-  color: var(--special-form-letter);
-  opacity: 0.4;
-}
-
-.filter-input-checkbox:hover + label {
+.filter-input-checkbox:focus + label::before {
   opacity: 1;
 }
 
-.filter-input-checkbox:active + label {
+.filter-input-checkbox:disabled + label::before {
   opacity: 0.1;
+}
+
+.filter-input-checkbox:disabled + label {
+  opacity: 0.3;
 }
 
 .filter-input-checkbox + label::before {
@@ -1149,7 +1155,7 @@ input[type="radio"].visually-hidden {
   background-repeat: no-repeat;
 }
 
-.filter-input-checkbox[checked] + label::before {
+.filter-input-checkbox:checked + label::before {
   content: "";
   position: absolute;
   top: -4px;
@@ -1166,7 +1172,6 @@ input[type="radio"].visually-hidden {
   font-weight: 500;
   text-transform: uppercase;
   border: 0;
-  outline: none;
   width: 260px;
   padding: 17px 89px 15px 88px;
   border-radius: 3px;
@@ -1213,7 +1218,61 @@ input[type="radio"].visually-hidden {
 }
 
 .list-sorting-arrows li:not(:last-child) {
-  margin-right: 18px;
+  margin-right: 14px;
+}
+
+.arrow-down,
+.arrow-up {
+  position: relative;
+  display: block;
+  width: 12px;
+  height: 12px;
+  left: 2px;
+}
+
+.arrow-down::before {
+  content: "";
+  position: absolute;
+  width: 11px;
+  height: 10px;
+  top: 1px;
+  left: 1px;
+  background-image: url("../img/icon-down-dir.svg");
+}
+
+.arrow-up::before {
+  content: "";
+  position: absolute;
+  width: 11px;
+  height: 10px;
+  top: 1px;
+  left: 1px;
+  background-image: url("../img/icon-up-dir.svg");
+}
+
+.list-sorting-products a,
+.list-sorting-arrows a {
+  font-size: 14px;
+  line-height: 18px;
+  text-transform: uppercase;
+  color: var(--basic-black);
+  opacity: 0.3;
+}
+
+.list-sorting-products a:hover,
+.list-sorting-arrows a:hover,
+.list-sorting-products a:focus,
+.list-sorting-arrows a:focus {
+  opacity: 0.6;
+}
+
+.list-sorting-products a:active,
+.list-sorting-arrows a:active {
+  opacity: 1.0;
+}
+
+.list-sorting-products .here:link {
+  opacity: 1.0;
 }
 
 .list-view-products {
@@ -1323,7 +1382,6 @@ input[type="radio"].visually-hidden {
   font-weight: 500;
   padding: 17px 72px 15px 72px;
   border: none;
-  outline: none;
   border-radius: 3px;
   background-color: var(--basic-red);
   color: var(--basic-white);
@@ -1357,56 +1415,7 @@ input[type="radio"].visually-hidden {
 
 
 
-.arrow-down,
-.arrow-up {
-  position: relative;
-}
 
-.arrow-down::before {
-  content: "";
-  position: absolute;
-  width: 11px;
-  height: 10px;
-  top: -12px;
-  left: 3px;
-  background-image: url("../img/icon-down-dir.svg");
-  background-repeat: no-repeat;
-
-}
-
-.arrow-up::before {
-  content: "";
-  position: absolute;
-  width: 11px;
-  height: 10px;
-  top: -11px;
-  left: 14px;
-  background-image: url("../img/icon-up-dir.svg");
-  background-repeat: no-repeat;
-}
-
-.list-sorting-products a,
-.list-sorting-arrows a {
-  font-size: 14px;
-  line-height: 18px;
-  text-transform: uppercase;
-  color: var(--basic-black);
-  opacity: 0.3;
-}
-
-.list-sorting-products a:hover,
-.list-sorting-arrows a:hover {
-  opacity: 0.6;
-}
-
-.list-sorting-products a:active,
-.list-sorting-arrows a:active {
-  opacity: 1.0;
-}
-
-.list-sorting-products .here:link {
-  opacity: 1.0;
-}
 
 .list-products-section {
   background-color: var(--basic-white);
@@ -1520,6 +1529,18 @@ input[type="radio"].visually-hidden {
   border: 2px solid var(--special-form-border);
 }
 
+.contact-form input[type="text"]:focus::placeholder,
+.contact-form input[type="email"]:focus::placeholder,
+.contact-form textarea:focus::placeholder {
+  color: var(--special-placeholder-focus);
+}
+
+.contact-form input[type="text"]:invalid,
+.contact-form input[type="email"]:invalid {
+  border-color: var(--special-more-red);
+  color: var(--special-more-red);
+}
+
 .contact-form textarea {
   width: 739px;
   min-height: 96px;
@@ -1541,7 +1562,6 @@ input[type="radio"].visually-hidden {
 }
 
 .contact-form .modal-button {
-  outline: none;
   border: none;
   border-radius: 3px;
   background-color: var(--basic-red);
@@ -1560,12 +1580,11 @@ input[type="radio"].visually-hidden {
 
 .modal-close {
   position: absolute;
-  top: 66px;
-  left: 849px;
+  top: 78px;
+  left: 848px;
   width: 21px;
   height: 21px;
   border: none;
-  outline: none;
   cursor: pointer;
   background-color: transparent;
 }
@@ -1576,9 +1595,8 @@ input[type="radio"].visually-hidden {
   width: 21px;
   height: 21px;
   background-image: url("../img/close-cross.svg");
-  background-repeat: no-repeat;
   left: 0;
-  top: 12px;
+  top: -1px;
   opacity: 0.3;
 }
 
@@ -1589,3 +1607,4 @@ input[type="radio"].visually-hidden {
 .modal-close:active::before {
   opacity: 0.1;
 }
+
