--- a/css/style.css
+++ b/css/style.css
@@ -714,14 +714,17 @@ input[type="radio"].visually-hidden {
   grid-template-rows: 1fr 1fr;
 }
 
-/* Временная карта */
-.footer-write-us {
+ /* background map and marker */
+
+  .footer-write-us {
+  background: 
+  url("../img/map-marker-1.png") 63% 38% no-repeat,
+  url("../img/map-1.png") 50% 50% no-repeat;
   background-color: var(--basic-map-gray);
-  background-image: url("../img/map-1.png");
-  width: 1440px;
-  height: 416px;
-  background-repeat: no-repeat;
-  margin: 0 auto;
+}
+
+.footer-write-us iframe {
+  position: absolute;
 }
 
 .contacts-container {
@@ -738,19 +741,6 @@ input[type="radio"].visually-hidden {
   display: flex;
   flex-direction: column;
   position: relative;
-}
-
-/* Временный маркер карты */
-
-.contacts::after {
-  content: "";
-  position: absolute;
-  width: 231px;
-  height: 190px;
-  left: 682px;
-  top: 32px;
-  background-image: url("../img/map-marker-1.png");
-  background-repeat: no-repeat;
 }
 
 .contacts p {
@@ -917,7 +907,7 @@ input[type="radio"].visually-hidden {
 .main-wrapper h1 {
   font-size: 55px;
   line-height: 55px;
-  margin: 67px 0px 108px 0px;
+  margin: 65px 0px 108px 0px;
   text-align: center;
 }
 
@@ -1489,8 +1479,28 @@ input[type="radio"].visually-hidden {
   display: none;
 }
 
+@keyframes bounce {
+ 0% { transform: translateY(-2000px);}
+ 70% { transform: translateY(30px);}
+ 90% { transform: translateY(-10px);}
+ 100% { transform: translateY(0);}
+}
+
 .modal-show {
   display: block;
+  animation-name: bounce;
+  animation-duration: 0.6s;
+}
+
+@keyframes shake {
+  0%, 100% {transform: translateX(0);}
+  10%, 30%, 50%, 70%, 90% {transform: translateX(-10px);}
+  20%, 40%, 60%, 80% {transform: translateX(10px);}
+}
+
+.modal-error {
+  animation-name: shake;
+  animation-duration: 0.6S;
 }
 
 .modal-contact {
